# aak-byraadsforespoergsler

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: linting.yml
